Added changes to contracts and services

--- a/lottery-back/package.json
+++ b/lottery-back/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "express": "^4.12.3",
     "swagger-express-mw": "^0.1.0",
-    "web3": "^1.2.6"
+    "web3": "^1.2.6",
+    "mathjs": "^7.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
